added stock changed event handler